Hook up google sheets data

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -83,17 +83,17 @@ const services: service[] = [
   <FFLogo />
   <div>
     <h1 class="md:text-8xl text-4xl font-black text-center flex flex-col">
-      <span>sign up to</span>
+      <span class="leading-snug tracking-tight">sign up to</span>
       <a
         href="https://legitfit.com/authenticate/signup/FarrellFitness"
-        class="text-orange-600 hover:text-orange-800 hover:cursor-pointer"
+        class="text-orange-600 hover:text-orange-800 hover:cursor-pointer leading-snug tracking-tight"
       >
         farrell fitness
       </a>
-      <span>now</span>
+      <span class="leading-snug tracking-tight">now</span>
     </h1>
   </div>
-  <h1 class="md:text-8xl text-4xl text-center">Opening Hours</h1>
+  <h1 class="md:text-8xl text-4xl text-center leading-snug tracking-tight font-black">Opening Hours</h1>
   <div class="md:space-y-8 space-y-4 text-sm">
     <p class="flex justify-between items-center w-full md:text-4xl">
       <span>Monday - Friday</span><span class="bg-orange-600 px-2 py-1"
