--- a/src/components/ClassTimetable.astro
+++ b/src/components/ClassTimetable.astro
@@ -1,20 +1,28 @@
 ---
-const classes = [
+type Cell = string | null;
+
+type Row = Cell[];
+
+type Timetable = Row[];
+
+const defaultClasses: Timetable = [
   [null, "mon", "tue", "wed", "thu", "fri", "sat", "sun"],
-  ["6:15", null, "s&c", null, "s&c", null, null, null],
-  ["7:00", null, null, "s&c", null, "s&c", null, null],
-  ["9:30", "s&c", null, "s&c", null, "s&c", "s&c", "s&c"],
-  ["9:45", null, "s&c", null, "s&c", null, null, null],
-  ["10:45", null, null, null, null, null, "s&c beginner", null],
-  ["16:15", null, "s&c", null, "s&c", null, null, null],
-  ["17:30", "s&c", null, "s&c", null, "s&c", null, null],
-  ["18:45", "s&c", "str only", "s&c", "str only", null, null, null],
+  ["6:15", null, null, null, null, null, null, null],
+  ["7:00", null, null, null, null, null, null, null],
+  ["9:30", null, null, null, null, null, null, null],
+  ["9:45", null, null, null, null, null, null, null],
+  ["10:45", null, null, null, null, null, null, null],
+  ["16:15", null, null, null, null, null, null, null],
+  ["17:30", null, null, null, null, null, null, null],
+  ["18:45", null, null, null, null, null, null, null],
 ];
+
+import getSheetsData from "../js/googleSheets";
+
+const classes: Timetable = (await getSheetsData("Timetable")) || defaultClasses;
 ---
 
-<div
-  class="flex flex-col w-full justify-center items-start mb-12 md:mb-24"
->
+<div class="flex flex-col w-full justify-center items-start mb-12 md:mb-24">
   <div class="flex flex-col space-y-1 text-2xl md:text-3xl mb-3 md:mb-6">
     <h1>summer timetable</h1>
     <h2 class="text-xs md:text-base text-gray-500">may 29 to 3 september</h2>
@@ -37,7 +45,7 @@ const classes = [
             ${cell !== null && rIdx !== 0 && cIdx !== 0 && "border"}
             `}
             >
-              {cell}
+              {cell !== "null" && cell}
             </div>
           ))}
         </div>
