--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -12,21 +12,16 @@ const { videoPath, title, summary } = Astro.props;
 
 <section>
   <VideoPlayer videoPath={videoPath} />
-  <div class="flex flex-wrap w-full md:mb-20 mb-10">
-    <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
-      <h1 class="sm:text-3xl text-2xl mb-2">
-        <div class="flex flex-wrap space-x-1">
-          {
-            title
-              .split(" ")
-              .map((word, index) => (
-                <span class={index === 0 ? "text-orange-600" : ""}>{word}</span>
-              ))
-          }
-        </div>
+  <div class="flex flex-wrap items-center w-full md:mb-20 mb-10">
+    <div class="md:w-1/3 w-full mb-6 md:mb-0">
+      <h1
+        class="md:text-5xl text-3xl mb-2 font-black tracking-widest text-transparent shadow-orange-600 italic"
+        style="-webkit-text-stroke-width: 1px; -webkit-text-stroke-color: var(--tw-shadow-color);"
+      >
+        {title}
       </h1>
     </div>
-    <p class="lg:w-1/2 w-full">
+    <p class="md:w-2/3 w-full md:pl-6">
       {summary}
     </p>
   </div>
