Updated some videos

--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -128,7 +128,7 @@ const priceList = await getData();
   <PageLayout
     title="Price List"
     summary="Explore our affordable price listing for a wide range of services and memberships at Farrell Fitness. From open gym access to personalized training programs, achieve your fitness goals without breaking the bank. Join us and start your fitness journey today!"
-    videoPath="/videos/mainVideo.mp4"
+    videoPath="/videos/mainVideo.webm"
   >
     <div class="">
       <div class="mx-auto w-full overflow-auto">
