--- a/src/pages/results.astro
+++ b/src/pages/results.astro
@@ -20,7 +20,7 @@ let randomNumbers = generateRandomIntegers();
   <PageLayout
     title="results & reviews"
     summary="Experience member transformations, tangible results, and rave reviews at Farrell Fitness. Join our community for weight loss, strength gains, and athletic improvements."
-    videoPath=""
+    videoPath="/videos/teamVideo.mp4"
   >
     <div class="flex flex-wrap md:-m-2 -m-1">
       <div class="flex flex-wrap w-1/2">
