--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -47,7 +47,7 @@ const team: Person[] = [
   <PageLayout
     title="meet our team"
     summary="Meet the dynamic team at Farrell Fitness, a group of fitness professionals committed to transforming lives. From experienced trainers and coaches to knowledgeable staff, we are here to guide and support you on your fitness journey."
-    videoPath=""
+    videoPath="/videos/oldMainVideo.mp4"
   >
     <div class="flex flex-wrap text-base font-medium justify-center">
       {
@@ -62,9 +62,7 @@ const team: Person[] = [
                 src={url}
               />
               <div class="w-full">
-                <h2 class="font-semibold text-lg ">
-                  {name}
-                </h2>
+                <h2 class="font-semibold text-lg ">{name}</h2>
                 <h3 class="text-orange-600 mb-3">{position}</h3>
                 <p class="mb-4 text-sm">{desc}</p>
               </div>
