--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -79,7 +79,7 @@ const services: service[] = [
   <!-- <div data-aos="fade" class="flex justify-center items-center">
     <Image src={Logo} alt="Logo" loading="eager" />
   </div> -->
-  <VideoPlayer client:visible videoPath="/videos/OpenGym.mp4" />
+  <VideoPlayer client:visible videoPath="/videos/OpenGym.webm" />
   <FFLogo />
   <div>
     <h1 class="md:text-8xl text-4xl font-black text-center flex flex-col">
