changed to airtable and tsx components

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ import "@fontsource/roboto/700.css";
 import "@fontsource/roboto/900.css";
 
 import Nav from "../components/Nav";
-import Footer from "../components/Footer.astro";
+import Footer from "../components/Footer";
 
 export interface Props {
   title: string;
@@ -57,7 +57,7 @@ const { title } = Astro.props;
     </div>
     <div class="relative mx-6 my-12 md:my-24 space-y-12 md:space-y-24">
       <slot />
-      <Footer />
+      <Footer client:load />
     </div>
     <script src="../js/main.js"></script>
   </body>
