--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import ServiceIcon from "../components/ServiceIcon";
 import VideoPlayer from "../components/VideoPlayer";
 import Layout from "../layouts/Layout.astro";
 import FFLogo from "../components/FFLogo";
-import PricingComponent from "../components/PricingComponent.astro";
+import PricingComponent from "../components/PricingComponent";
 
 interface service {
   icon: string;
@@ -93,7 +93,11 @@ const services: service[] = [
       <span class="leading-snug tracking-tight">now</span>
     </h1>
   </div>
-  <h1 class="md:text-8xl text-4xl text-center leading-snug tracking-tight font-black">Opening Hours</h1>
+  <h1
+    class="md:text-8xl text-4xl text-center leading-snug tracking-tight font-black"
+  >
+    Opening Hours
+  </h1>
   <div class="md:space-y-8 space-y-4 text-sm">
     <p class="flex justify-between items-center w-full md:text-4xl">
       <span>Monday - Friday</span><span class="bg-orange-600 px-2 py-1"
