--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -1,127 +1,12 @@
 ---
-import googleSheets from "../js/googleSheets";
 import Layout from "../layouts/Layout.astro";
 import PageLayout from "../layouts/PageLayout.astro";
+import Button from "../components/Button";
+import PriceList from "../components/PriceList";
 
-const defaultPriceList = [
-  {
-    category: "classes",
-    service: [
-      { desc: "8 classes", duration: "1 month", price: "TBD" },
-      { desc: "12 classes", duration: "1 month", price: "TBD" },
-      { desc: "classes & gym", duration: "1 month", price: "TBD" },
-      { desc: "class", duration: "1 day", price: "TBD" },
-    ],
-  },
-  {
-    category: "open gym",
-    service: [
-      { desc: "gym", duration: "1 month", price: "TBD" },
-      { desc: "gym", duration: "3 months", price: "TBD" },
-      { desc: "gym", duration: "6 months", price: "TBD" },
-      { desc: "gym", duration: "1 year", price: "TBD" },
-      { desc: "gym", duration: "1 day", price: "TBD" },
-      { desc: "gym", duration: "1 week", price: "TBD" },
-      { desc: "gym (student)", duration: "1 month", price: "TBD" },
-      { desc: "gym (student)", duration: "3 months", price: "TBD" },
-      { desc: "gym (student)", duration: "6 months", price: "TBD" },
-      { desc: "gym (student)", duration: "1 year", price: "TBD" },
-    ],
-  },
-  {
-    category: "personal training",
-    service: [
-      { desc: "personal training", duration: "1 session", price: "TBD" },
-      {
-        desc: "personal training 1 week",
-        duration: "2 sessions",
-        price: "TBD",
-      },
-      {
-        desc: "personal training 5 week block",
-        duration: "10 sessions",
-        price: "TBD",
-      },
-      {
-        desc: "semi personal training 2 people",
-        duration: "1 session",
-        price: "TBD",
-      },
-    ],
-  },
-  {
-    category: "gym & programming",
-    service: [
-      { desc: "gym & program", duration: "1 month", price: "TBD" },
-      { desc: "gym & program", duration: "3 months", price: "TBD" },
-      {
-        desc: "consulation",
-        duration: "body scan mobility screen strength test",
-        price: "TBD",
-      },
-    ],
-  },
-  {
-    category: "sports message",
-    service: [
-      { desc: "sports massage (non member)", duration: "", price: "TBD" },
-      { desc: "sports massage (member)", duration: "", price: "TBD" },
-    ],
-  },
-  {
-    category: "styku 3d body scan",
-    service: [
-      { desc: "styku body scan", duration: "", price: "TBD" },
-      { desc: "styku body scan (student)", duration: "", price: "TBD" },
-    ],
-  },
-  {
-    category: "pt & gym program",
-    service: [
-      { desc: "personal training", duration: "5 sessions", price: "TBD" },
-      { desc: "gym", duration: "3 months", price: "TBD" },
-      { desc: "program", duration: "3 months", price: "TBD" },
-      { desc: "", duration: "Total", price: "TBD" },
-    ],
-  },
-];
 
-const getData = async () => {
-  const data = await googleSheets("PriceList");
 
-  if (data) {
-    const headers = await data[0];
-    const result = await data.slice(1).reduce((acc, row) => {
-      const [category, ...serviceProps] = row;
-      const existingCategory = acc.find((item) => item.category === category);
-      if (existingCategory) {
-        existingCategory.service.push(
-          Object.fromEntries(
-            headers
-              .slice(1)
-              .map((header, index) => [header, serviceProps[index]])
-          )
-        );
-      } else {
-        acc.push({
-          category,
-          service: [
-            Object.fromEntries(
-              headers
-                .slice(1)
-                .map((header, index) => [header, serviceProps[index]])
-            ),
-          ],
-        });
-      }
-      return acc;
-    }, []);
-    return result;
-  }
-  return defaultPriceList;
-};
 
-const priceList = await getData();
 ---
 
 <Layout title="Membership">
@@ -130,45 +15,7 @@ const priceList = await getData();
     summary="Explore our affordable price listing for a wide range of services and memberships at Farrell Fitness. From open gym access to personalized training programs, achieve your fitness goals without breaking the bank. Join us and start your fitness journey today!"
     videoPath="/videos/mainVideo.webm"
   >
-    <div class="">
-      <div class="mx-auto w-full overflow-auto">
-        <table
-          class="whitespace-no-wrap w-full table-auto text-center text-xxs md:text-base"
-        >
-          <tbody class="text-left font-light">
-            {
-              priceList.map(({ category, service }) => (
-                <div>
-                  <tr>
-                    <td
-                      colspan="3"
-                      class="py-4 text-left text-base md:text-2xl font-medium"
-                    >
-                      {category}
-                    </td>
-                  </tr>
-                  {service.map(({ desc, duration, price }) => (
-                    <tr>
-                      <td class="px-4 py-3 font-normal">{desc}</td>
-                      <td class="px-4 py-3 font-normal text-right">
-                        {duration}
-                      </td>
-                      <td class="px-4 py-3 font-normal">€{price}</td>
-                    </tr>
-                  ))}
-                </div>
-              ))
-            }
-          </tbody>
-        </table>
-      </div>
-    </div>
-    <div class="mx-auto mt-4 flex w-full pl-4">
-      <a
-        href="https://legitfit.com/authenticate/signup/FarrellFitness"
-        class="ml-auto flex rounded border-0 bg-orange-600 px-6 py-2 text-white hover:bg-orange-900 focus:outline-none"
-        >Sign up</a
-      >
-    </div>
+    <PriceList client:load />
+    <Button text={"sign up"} />
   </PageLayout>
 </Layout>
