--- a/src/pages/classes.astro
+++ b/src/pages/classes.astro
@@ -40,7 +40,7 @@ const classes: Class[] = [
   >
     <ClassTimetable client:load />
 
-    <div class="flex flex-wrap">
+    <div data-aos="fade-left" class="flex flex-wrap">
       {
         classes.map(({ title, excerpt, url }) => (
           <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
