--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,86 +1,20 @@
 ---
-import ServiceIcon from "../components/ServiceIcon";
-import VideoPlayer from "../components/VideoPlayer";
-import Layout from "../layouts/Layout.astro";
+import { Image } from "astro:assets";
+import Logo from "../../public/images/LogoCycles.webp";
 import FFLogo from "../components/FFLogo";
 import PricingComponent from "../components/PricingComponent";
-
-interface service {
-  icon: string;
-  description: string;
-  url: string;
-}
-
-const services: service[] = [
-  {
-    url: "https://images.pexels.com/photos/260352/pexels-photo-260352.jpeg?auto=compress&cs=tinysrgb&w=400",
-    icon: "bench",
-    description: "4,000 kg weights",
-  },
-  {
-    url: "https://images.pexels.com/photos/1954524/pexels-photo-1954524.jpeg?auto=compress&cs=tinysrgb&w=400",
-    icon: "cardio",
-    description: "+28 cardio equipment",
-  },
-  {
-    url: "https://images.pexels.com/photos/5938382/pexels-photo-5938382.jpeg?auto=compress&cs=tinysrgb&w=400",
-    icon: "clean",
-    description: "sanitation",
-  },
-  {
-    url: "https://images.pexels.com/photos/2292837/pexels-photo-2292837.jpeg?auto=compress&cs=tinysrgb&w=400",
-    icon: "college",
-    description: "professional staff",
-  },
-  {
-    url: "https://images.pexels.com/photos/4608173/pexels-photo-4608173.jpeg?auto=compress&cs=tinysrgb&w=400",
-    icon: "gymequip",
-    description: "+20 weight machines",
-  },
-  {
-    url: "https://images.pexels.com/photos/5878699/pexels-photo-5878699.jpeg?auto=compress&cs=tinysrgb&w=400",
-    icon: "kcal",
-    description: "personalized programs",
-  },
-  {
-    url: "https://images.pexels.com/photos/4162587/pexels-photo-4162587.jpeg?auto=compress&cs=tinysrgb&w=400",
-    icon: "locker",
-    description: "lockers",
-  },
-  {
-    url: "https://images.pexels.com/photos/5473186/pexels-photo-5473186.jpeg?auto=compress&cs=tinysrgb&w=400",
-    icon: "massage",
-    description: "sports massage",
-  },
-  {
-    url: "https://images.pexels.com/photos/3143085/pexels-photo-3143085.jpeg?auto=compress&cs=tinysrgb&w=400",
-    icon: "measure",
-    description: "measureable results",
-  },
-  {
-    url: "https://images.pexels.com/photos/5000222/pexels-photo-5000222.jpeg?auto=compress&cs=tinysrgb&w=400",
-    icon: "privacy",
-    description: "changing rooms",
-  },
-  {
-    url: "https://images.pexels.com/photos/9155214/pexels-photo-9155214.jpeg?auto=compress&cs=tinysrgb&w=400",
-    icon: "shower",
-    description: "private showers",
-  },
-  {
-    url: "https://images.pexels.com/photos/6551070/pexels-photo-6551070.jpeg?auto=compress&cs=tinysrgb&w=400",
-    icon: "waist",
-    description: "full body conditioning",
-  },
-];
+import ServiceIcon from "../components/ServiceIcon";
+import VideoPlayer from "../components/VideoPlayer";
+import { facilities } from "../js/facilitiesData";
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Gym & Performance Center">
-  <!-- <div data-aos="fade" class="flex justify-center items-center">
+  <div data-aos="fade" class="flex justify-center items-center">
     <Image src={Logo} alt="Logo" loading="eager" />
-  </div> -->
+  </div>
+  <!-- <FFLogo /> -->
   <VideoPlayer client:visible videoPath="/videos/OpenGym.webm" />
-  <FFLogo />
   <div>
     <h1 class="md:text-8xl text-4xl font-black text-center flex flex-col">
       <span class="leading-snug tracking-tight">sign up to</span>
@@ -113,7 +47,7 @@ const services: service[] = [
   <PricingComponent />
   <ul class="flex flex-wrap">
     {
-      services.map(({ icon, description, url }) => (
+      facilities.map(({ icon, description, url }) => (
         <ServiceIcon
           icon={icon}
           description={description}
@@ -124,11 +58,11 @@ const services: service[] = [
     }
   </ul>
 
-  <section class="relative">
-    <div class="mx-auto flex sm:flex-nowrap flex-wrap space-y-12 md:space-y-0">
+  <section class="aspect-square relative flex justify-center items-center">
+    <div class="flex space-y-12 h-full">
       <div
         data-aos="fade-right"
-        class="lg:w-2/3 md:w-1/2 bg-gray-300 overflow-hidden sm:mr-10 p-10 flex items-end justify-start relative -mx-6 md:ml-0"
+        class="bg-gray-300 overflow-hidden p-10 flex items-end justify-start relative -mx-6 md:mx-0"
       >
         <iframe
           class="absolute inset-0"
@@ -137,63 +71,24 @@ const services: service[] = [
           width="100%"
           height="100%"></iframe>
         <div
-          class="bg-white relative flex flex-wrap py-6 rounded shadow-md text-gray-950"
+          class="tracking-normal bg-white relative flex flex-wrap py-6 rounded shadow-md text-gray-950"
         >
           <div class="lg:w-1/2 px-6">
-            <h2 class="font-semibold text-xs">
+            <h2 class="">
               Farrell Fitness 27, Woodbine Business Park, New Ross, Co. Wexford
             </h2>
-            <p class="mt-1">Gym & Fitness Center</p>
+            <p class="mt-1 text-gray-400">Gym & Fitness Center</p>
           </div>
           <div class="lg:w-1/2 px-6 mt-4 lg:mt-0">
-            <h2 class="font-semibold text-xs pr-4">EMAIL</h2>
-            <a class="text-orange-600 md:text-xs text-xxs"
-              >info.farrellfitness<br class="hidden md:block" />@gmail.com</a
+            <h2 class="pr-4">EMAIL</h2>
+            <a
+              href="mailto:info.farrellfitness@gmail.com"
+              class="text-orange-600">info.farrellfitness@gmail.com</a
             >
-            <h2 class="font-semibold text-xs mt-4">Phone</h2>
-            <p class="">087 775 9716</p>
+            <h2 class="mt-4">Phone</h2>
+            <p>087 775 9716</p>
           </div>
         </div>
-      </div>
-      <div
-        data-aos="fade-right"
-        class="lg:w-1/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 md:mt-0"
-      >
-        <h2 class="text-lg mb-1 font-medium text-orange-600">Contact us</h2>
-        <p class="mb-">
-          to find out more about what we have to offer and how we can help you
-          start your fitness journey
-        </p>
-        <div class="relative mb-4">
-          <label for="name" class="text-sm">Name</label>
-          <input
-            type="text"
-            id="name"
-            name="name"
-            class="w-full bg-white rounded border border-gray-300 focus:border-orange-500 focus:ring-2 focus:ring-orange-200 text-base outline-none py-1 px-3 transition-colors duration-200 ease-in-out text-gray-900"
-          />
-        </div>
-        <div class="relative mb-4">
-          <label for="email" class="text-sm">Email</label>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            class="w-full bg-white rounded border border-gray-300 focus:border-orange-500 focus:ring-2 focus:ring-orange-200 text-base outline-none py-1 px-3 transition-colors duration-200 ease-in-out text-gray-900"
-          />
-        </div>
-        <div class="relative mb-4">
-          <label for="message" class="text-sm">Message</label>
-          <textarea
-            id="message"
-            name="message"
-            class="w-full bg-white rounded border border-gray-300 focus:border-orange-500 focus:ring-2 focus:ring-orange-200 h-32 text-base outline-none py-1 px-3 resize-none transition-colors duration-200 ease-in-out text-gray-900"
-          ></textarea>
-        </div>
-        <button
-          class="text-white bg-orange-600 border-0 py-2 px-6 focus:outline-none hover:bg-orange-800 rounded text-lg"
-          >Send message</button
-        >
       </div>
     </div>
   </section>
