--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -11,8 +11,8 @@ const { videoPath, title, summary } = Astro.props;
 ---
 
 <section>
-  <VideoPlayer videoPath={videoPath} />
-  <div class="flex flex-wrap items-center w-full md:mb-20 mb-10" data-aos="fade">
+  <!-- <VideoPlayer videoPath={videoPath} /> -->
+  <div class="flex flex-wrap items-center w-full md:mb-20 mb-10">
     <div class="md:w-1/3 w-full mb-6 md:mb-0">
       <h1
         class="md:text-5xl text-3xl mb-2 font-black tracking-widest text-transparent shadow-orange-600 italic"
