--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,11 +10,11 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Gym & Performance Center">
-  <div data-aos="fade" class="flex justify-center items-center">
+  <div class="flex justify-center items-center">
     <Image src={Logo} alt="Logo" loading="eager" />
   </div>
   <!-- <FFLogo /> -->
-  <VideoPlayer client:visible videoPath="/videos/OpenGym.webm" />
+  <!-- <VideoPlayer client:visible videoPath="/videos/OpenGym.webm" /> -->
   <div>
     <h1 class="md:text-8xl text-4xl font-black text-center flex flex-col">
       <span class="leading-snug tracking-tight">sign up to</span>
@@ -61,7 +61,6 @@ import Layout from "../layouts/Layout.astro";
   <section class="aspect-square relative flex justify-center items-center">
     <div class="flex space-y-12 h-full">
       <div
-        data-aos="fade-right"
         class="bg-gray-300 overflow-hidden p-10 flex items-end justify-start relative -mx-6 md:mx-0"
       >
         <iframe
