--- a/src/pages/merch.astro
+++ b/src/pages/merch.astro
@@ -1,9 +1,9 @@
 ---
 import { Image } from "astro:assets";
+import Button from "../components/Button";
 import { items } from "../js/merchandiseData";
 import Layout from "../layouts/Layout.astro";
 import PageLayout from "../layouts/PageLayout.astro";
-import Button from "../components/Button";
 ---
 
 <Layout title="Merchandise">
@@ -15,10 +15,7 @@ import Button from "../components/Button";
     <div class="flex flex-wrap -m-4">
       {
         items.map(({ title, category, price, url }, index) => (
-          <div
-            data-aos={`fade-${index % 2 === 0 ? "left" : "right"}`}
-            class="lg:w-1/3 md:w-1/2 p-4 w-full"
-          >
+          <div class="lg:w-1/3 md:w-1/2 p-4 w-full">
             <a class="block relative h-48 rounded overflow-hidden">
               <Image
                 width={300}
@@ -48,7 +45,7 @@ import Button from "../components/Button";
         available, seize the opportunity to look your best while pushing your
         limits.
       </h1>
-      <Button text="Shop now"/>
+      <Button text="Shop now" />
     </div>
   </PageLayout>
 </Layout>
