--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -1,9 +1,9 @@
 ---
 import { Image } from "astro:assets";
+import Button from "../components/Button";
+import { services } from "../js/servicesData";
 import Layout from "../layouts/Layout.astro";
 import PageLayout from "../layouts/PageLayout.astro";
-import { services } from "../js/servicesData";
-import Button from "../components/Button";
 ---
 
 <Layout title="Services">
@@ -15,7 +15,7 @@ import Button from "../components/Button";
     <div class="flex flex-wrap -m-4">
       {
         services.map(({ title, subTitle, excerpt, url }, index) => (
-          <div class="md:w-1/3 p-4" data-aos="fade-left">
+          <div class="md:w-1/3 p-4">
             <div class="bg-gray-900 p-6 rounded-lg">
               <Image
                 width={300}
